test/classes/nilability/multiple-errors.1.good
multiple-errors.chpl:16: In function 'main':
multiple-errors.chpl:18: error: unresolved call 'borrowed C?.foo()'
multiple-errors.chpl:6: note: this candidate did not match: C.foo()
multiple-errors.chpl:18: note: because method call receiver with type borrowed C?
multiple-errors.chpl:6: note: is passed to formal 'this: borrowed C'
multiple-errors.chpl:19: error: unresolved call 'borrowed C?.bar()'
multiple-errors.chpl:9: note: this candidate did not match: C.bar()
multiple-errors.chpl:19: note: because method call receiver with type borrowed C?
multiple-errors.chpl:9: note: is passed to formal 'this: borrowed C'
multiple-errors.chpl:20: error: unresolved call 'baz(borrowed C?)'
multiple-errors.chpl:12: note: this candidate did not match: baz(arg: C)
multiple-errors.chpl:20: note: because call actual argument #1 with type borrowed C?
multiple-errors.chpl:12: note: is passed to formal 'arg: C'
